# global_search

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
global_search/: urls.py  utils.py  wsgi.py
global_search/admin/: __init__.py
global_search/conf/: settings.py
global_search/core/: apps.py
global_search/core/templates/: dashboard.html  detail.html  login.html  result.html  signup.html
global_search/core/views/: auto_suggest.py  dashboard.py  detail.py  login.py  login_otp_send.py  logout.py  mobile_otp_send.py  result.py  search.py  signup.py
global_search/migrations/: 0001_initial.py  0002_city_country_countrylanguage_and_more.py
global_search/mixins/: api_view.py  create_view.py  generic_view.py  response.py
global_search/models/: city.py  country.py  countrylanguage.py  user.py
global_search/validators/: phone_field.py  utils.py
